crates/parser/src/snapshots/parser__tests__parse_inline_err@0014_vector_sub_expr_no_expr.ath.snap
---
source: crates/parser/src/tests.rs
description: "vector-sub\n"
input_file: crates/parser/test_data/parser/inline/err/expr/0014_vector_sub_expr_no_expr.ath
---
VECTOR_SUB_EXPR
  VECTOR_SUB_KW "vector-sub"
  WHITESPACE "\n"
error 10: Expected to find a target expression for the vector-sub expression
error 10: Expected to find a value (expr) for the vector-sub expression

