crates/parser/src/snapshots/parser__tests__parse_inline_err@0027_let_rec_part_no_pat.ath.snap
---
source: crates/parser/src/tests.rs
description: "letrec { a := b; := c } foo\n"
input_file: crates/parser/test_data/parser/inline/err/expr/0027_let_rec_part_no_pat.ath
---
LET_REC_EXPR
  LETREC_KW "letrec"
  WHITESPACE " "
  L_CURLY "{"
  WHITESPACE " "
  LET_REC_PART
    IDENTIFIER
      IDENT "a"
      WHITESPACE " "
    COLON_EQ ":="
    WHITESPACE " "
    IDENT_EXPR
      IDENTIFIER
        IDENT "b"
  LET_REC_PART
    SEMI ";"
    WHITESPACE " "
    COLON_EQ ":="
    WHITESPACE " "
    IDENT_EXPR
      IDENTIFIER
        IDENT "c"
        WHITESPACE " "
  R_CURLY "}"
  WHITESPACE " "
  IDENT_EXPR
    IDENTIFIER
      IDENT "foo"
      WHITESPACE "\n"
error 17: Expected to find an identifier for the letrec binding

